syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Common.Proto";
option java_package = "com.cacti.generated";
option java_multiple_files = true;

package objects;

message Cactus {
    sint64 id = 1;
    string code = 2;
    string description = 3;
    string location = 4;
    string barcodes = 5;
    sint64 photo_id = 6;
    google.protobuf.Timestamp last_modified = 7;
}